<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   style="@style/PagePresentation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PageResultat"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/monnaie_a_convertir" />

        <Spinner
            android:id="@+id/boxMonnaieAConv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:layout_weight="1"
            android:text="@string/monnaie_convertie" />

        <Spinner
            android:id="@+id/MonnaieConv"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textMontant"
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:text="@string/montant" />

        <EditText
            android:id="@+id/txtSaisieMontant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#FF000000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnQuitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/quitter" />

        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:onClick="convertir"

            android:text="@string/btn_convertir" />


    </LinearLayout>

    <ImageView
        android:id="@+id/licorne"
        android:layout_width="411dp"
        android:layout_height="83dp" />


</LinearLayout>
